--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+Public/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
-[Dd]ebug/
-[Rr]elease/
-
+*rsa
+*pfx
+secrets.json
