Add GoogleOptions and Liblaries

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,6 +1,11 @@
 {
     "tasks": [
         {
+            "type": "shell",
+            "label": "dotnet-build",
+            "command" : "dotnet build"            
+        },
+        {
             "type": "docker-build",
             "label": "docker-build: debug",
             "dependsOn": [
