--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -1,9 +1,25 @@
 {
+  "GDriveSecretsPath" : "secrets.json",
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConsulOptions": {
+    "ServiceAddress" : "https://localhost:5008",
+    "ConsulAdress" : "http://localhost:8500",
+    "Tags" : ["Bijector", "GDrive", "Drive", "Google"],
+    "ServiceName" : "Bijector GDrive"
+  },
+  "MongoDbOptions": {
+      "ConnectionString":"mongodb://localhost:27017",
+      "DbName":"GDrive"
+  },
+  "GoogleOptions": 
+  {
+    "SecretsFilePath" : "secrets.json",
+    "RedirectUrl" : "https://localhost:5008/gdriveauth/getauthtoken"
   }
 }
