--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,28 @@
 {
     "configurations": [
         {
+            "name": ".NET Core Launch (web)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "dotnet-build",
+            "program": "${workspaceFolder}/src/bin/Debug/netcoreapp3.0/Bijector.GDrive.dll",
+            "args": [
+                "--urls=https://localhost:5008;http://localhost:5007"
+            ],
+            "cwd": "${workspaceFolder}/src",
+            "stopAtEntry": false,
+            "serverReadyAction": {
+                "action": "openExternally",
+                "pattern": "^\\s*Now listening on:\\s+(https?://\\S+)"
+            },
+            "env": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            },
+            "sourceFileMap": {
+                "/Views": "${workspaceFolder}/Views"
+            }
+        },
+        {
             "name": "Docker .NET Core Launch",
             "type": "docker",
             "request": "launch",
