--- a/src/Bijector.GDrive.csproj
+++ b/src/Bijector.GDrive.csproj
@@ -1,9 +1,13 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <UserSecretsId>8bc28c557aa94247a88f21e0a8f18d68</UserSecretsId>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="Google.Apis.Drive.v3" Version="1.42.0.1778" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0" />
+  </ItemGroup>
   <Choose>
     <When Condition="$(Configuration)=='Release'">
       <ItemGroup>
@@ -18,5 +22,4 @@
       </ItemGroup>
     </Otherwise>
   </Choose>
-
 </Project>
