Add command support

--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -13,6 +13,17 @@
     "Tags" : ["Bijector", "GDrive", "Drive", "Google"],
     "ServiceName" : "Bijector GDrive"
   },
+  "AppName": "Bijector GDrive",
+  "RabbitMQOptions": {
+    "HostName" : "localhost",
+    "UserName" : "guest",
+    "Password" : "guest",
+    "VirtualHost" : "/",
+    "Port" : 5672,
+    "ExchangeType" : "topic",
+    "IsExchangeDurable" : true,
+    "IsExchangeAutoDelete" : false
+  },
   "MongoDbOptions": {
       "ConnectionString":"mongodb://localhost:27017",
       "DbName":"GDrive"
