--- a/src/appsettings.Production.json
+++ b/src/appsettings.Production.json
@@ -17,6 +17,17 @@
         "ConnectionString":"mongodb://mongo:27017",
         "DbName":"GDrive"
     },
+    "AppName": "Bijector GDrive",
+    "RabbitMQOptions": {
+        "HostName" : "rabbitmq",
+        "UserName" : "guest",
+        "Password" : "guest",
+        "VirtualHost" : "/",
+        "Port" : 5672,
+        "ExchangeType" : "topic",
+        "IsExchangeDurable" : true,
+        "IsExchangeAutoDelete" : false
+    },
     "GoogleOptions": 
     {
       "SecretsFilePath" : "secrets.json",
